Export CT CP J operating point humidity